--- a/www/index.html
+++ b/www/index.html
@@ -30,16 +30,15 @@
         <title>Hello World</title>
     </head>
     <body>
-        <div class="app">
+        <p>Hi world no robots here!</p>
+
+        <!--<<div class="app">
             <h1>PhoneGap</h1>
-            <!--<div id="deviceready" class="blink">
+            div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
-            </div>-->
-
-            <p>Hi world no robots here!</p>
-
-        </div>
+            </div>
+        </div>-->
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
