--- a/www/index.html
+++ b/www/index.html
@@ -30,15 +30,14 @@
         <title>Hello World</title>
     </head>
     <body>
-        <p>Hi world no robots here!</p>
-
-        <!--<<div class="app">
-            <h1>PhoneGap</h1>
-            div id="deviceready" class="blink">
+        <div class="app">
+            <p>Hi world no robots here!</p>
+            <!--<h1>PhoneGap</h1>
+            <div id="deviceready" class="blink">
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
-            </div>
-        </div>-->
+            </div>-->
+        </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
